Fixed spacing on attribution

--- a/d3final.css
+++ b/d3final.css
@@ -1,12 +1,12 @@
 .attr {
 	width: 1150px;
-	height: 300px;
+	height: 500px;
 	background-color: lightgray;
 }
 
 .container {
 	display: inline-block;
-	height: 250px;
+	height: 400px;
 	vertical-align: top;
 	margin: 0px 7px 0px 7px
 }
